# playground-ai

./: README.md  fish-config.fish  setup-ssh-root.sh
2025-10-batches-and-gradients/: pyproject.toml
2025-10-batches-and-gradients/src/: 000.py
2025-10-mingpt/: .envrc  .gitignore  README.md  hello.py  pyproject.toml
2025-10-mingpt/src/: chatgpt.py  experiments.py  model.py  trainer.py  utils.py
2025-10-mingpt/src/experiments/: init_verification.py  input_independent.py  overfit_batch.py  verify_decreasing_loss.py
2025-10-simclr/: .gitignore  README.md  pyproject.toml  setup-ssh.sh
2025-10-simclr/src/: main.py  min_loss.py
