[project]
name = "2025-10-simclr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "wandb>=0.22.3"
]

[project.optional-dependencies]
dev = ["torch>=2.9.0", "torchvision>=0.24.0"]
